--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -39,8 +39,9 @@
 
   # #- name: Install postgresql
 
-  # - name: Install PostgreSQL
-  #   command: sudo apt install postgresql postgresql-contrib -y
+  - name: Install PostgreSQL
+    command: sudo apt install postgresql postgresql-contrib -y
+    
   #   # apt: name={{ item }} update_cache=true state=installed
   #   # with_items:
   #   #   - postgresql
