--- a/postgresql1.yml
+++ b/postgresql1.yml
@@ -7,10 +7,8 @@
   - name: ensure apt cache is up to date
     apt: update_cache=yes
   - name: ensure packages are installed
-    apt: name={{item}}
-    with_items:
-        - postgresql
-        - postgresql-contrib
+    apt: name=postgresql postgresql-contrib
+
 
 - hosts: dbserver
   become: yes
