--- a/postgresql1.yml
+++ b/postgresql1.yml
@@ -7,7 +7,7 @@
   - name: ensure apt cache is up to date
     apt: update_cache=yes
   - name: ensure packages are installed
-    apt: name= postgresql,postgresql-contrib
+    apt: name= postgresql
 
 
 - hosts: dbserver
