--- a/postgresql1.yml
+++ b/postgresql1.yml
@@ -5,9 +5,13 @@
   tasks:
   - name: ensure apt cache is up to date
     apt: update_cache=yes
-  - name: ensure packages are installed
-    apt: name=postgresql
 
+  - name: Install PostgreSQL
+    apt: name={{ item }} update_cache=yes state=installed
+    with_items:
+      - postgresql
+      - postgresql-contrib
+      - python3-psycopg2
 
 - hosts: dbserver
   become: yes
