--- a/postgresql1.yml
+++ b/postgresql1.yml
@@ -24,13 +24,13 @@
 
   tasks:
   - name: ensure database is created
-    postgres: name={{dbname}}
+    postgresql_db: name={{dbname}}
 
   - name: ensure user has access to database
-    postgres: db={{dbname}} name={{dbuser}} password={{dbpassword}} priv=ALL
+    postgresql_user: db={{dbname}} name={{dbuser}} password={{dbpassword}} priv=ALL
 
   - name: ensure user does not have unnecessary privilege
-    postgres: name={{dbuser}} role_attr_flags=NOSUPERUSER,NOCREATEDB
+    postgresql_user: name={{dbuser}} role_attr_flags=NOSUPERUSER,NOCREATEDB
   
   - name: ensure no other user can access the database
     postgresql_privs: db={{dbname}} role=PUBLIC type=database priv=ALL state=absent
