--- a/postgresql.yml
+++ b/postgresql.yml
@@ -4,7 +4,7 @@
   become: true 
 
   tasks:
-  
+
   - name: Ensure bash, OpenSSl, and libssl are the latest versions
     apt: name={{ item }} update_cache=true state=latest
     with_items:
@@ -27,7 +27,7 @@
     service: name=postgresql state=started enabled=yes
 
   - name: Ensure database is created
-    sudo_user: postgres
+    #sudo_user: postgres
     postgresql_db: name=atc
               encoding='UTF-8'
               lc_collate='en_US.UTF-8'
