--- a/postgresql.yml
+++ b/postgresql.yml
@@ -15,7 +15,7 @@
     tags: packages
 
   - name: Install PostgreSQL
-    apt: name={{ item }} update_cache=true state=installed
+    apt: name={{ item }} update_cache=true state=present
     with_items:
       - postgresql
       - postgresql-contrib
