--- a/postgresql.yml
+++ b/postgresql.yml
@@ -26,6 +26,9 @@
   - name: Ensure the PostgreSQL service is running
     service: name=postgresql state=started enabled=yes
 
+  - name: ensure database is created
+    postgresql_db: name=atc
+
   - name: Ensure database is created
     #sudo_user: postgres
     postgresql_db: name=atc
