--- a/postgresql.yml
+++ b/postgresql.yml
@@ -31,7 +31,7 @@
       - python-psycopg2
     tags:
       - packages
-      
+
   - name: create a database
     postgresql_db:
         name: atc
@@ -41,11 +41,11 @@
     become_user: postgres
     become: yes
 
-  - name: Connect to acme database, create django user, and grant access to database and products table
-    postgresql_user:
-     db: atc
-     name: postgres
-     password: postgres
+  # - name: Connect to acme database, create django user, and grant access to database and products table
+  #   postgresql_user:
+  #    db: atc
+  #    name: postgres
+  #    password: postgres
      
   - name: Ensure the PostgreSQL service is running
     service: name=postgresql state=started enabled=yes
