--- a/postgresql.yml
+++ b/postgresql.yml
@@ -50,8 +50,8 @@
   - name: Ensure the PostgreSQL service is running
     service: name=postgresql state=started enabled=yes
 
-  - name: ensure database is created
-    postgresql_db: name=atc
+  # - name: ensure database is created
+  #   postgresql_db: name=atc
 
   - name: Ensure database is created
     #sudo_user: postgres
