--- a/postgresql.yml
+++ b/postgresql.yml
@@ -53,14 +53,14 @@
   # - name: ensure database is created
   #   postgresql_db: name=atc
 
-  - name: Ensure database is created
-    #sudo_user: postgres
-    postgresql_db: name=atc
-              encoding='UTF-8'
-              lc_collate='en_US.UTF-8'
-              lc_ctype='en_US.UTF-8'
-              template='template0'
-              state=present
+  # - name: Ensure database is created
+  #   #sudo_user: postgres
+  #   postgresql_db: name=atc
+  #             encoding='UTF-8'
+  #             lc_collate='en_US.UTF-8'
+  #             lc_ctype='en_US.UTF-8'
+  #             template='template0'
+  #             state=present
 
   - name: restart postgresql
     service: name=postgresql state=restarted
