--- a/Postgre_Concourse_Install.yml
+++ b/Postgre_Concourse_Install.yml
@@ -21,6 +21,7 @@
         - postgresql-contrib
         - libpq-dev
         - python-psycopg2
+        - python3-psycopg2
       tags: packages
 
     - name: install prerequisites
@@ -29,6 +30,7 @@
       with_items:
         - libpq-dev
         - python-psycopg2
+        - python3-psycopg2
       tags:
         - packages
 
