--- a/postgresql.yml
+++ b/postgresql.yml
@@ -32,6 +32,9 @@
     tags:
       - packages
 
+  - name: create admin user
+    action: user name=postgres group=postgres state=present
+
   - name: create a database
     postgresql_db:
         name: atc
